<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/title_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/delete_transaction_title_msg"
        android:textColor="#262626"
        android:textSize="20sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title_msg"
        android:background="@color/primary_warm_grey_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/separator"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/action_delete_2"
            android:textColor="@color/secondary_red"
            android:textSize="16sp"
            android:textStyle="normal" />

        <View
            android:id="@+id/btns_separator"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary_warm_grey_light" />

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/action_cancel_2"
            android:textColor="#979797"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
