<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/balance_details_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="90dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/deposit_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ic_circle_image"
                android:contentDescription="@null"
                android:padding="14dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_balance_incoming" />

            <LinearLayout
                android:id="@+id/incoming_balance_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/incoming_balance_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran"
                    android:textColor="#262626"
                    android:textSize="13sp"
                    android:text="@string/label_incoming_balance_client" />

                <TextView
                    android:id="@+id/incoming_balance_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran"
                    android:maxLines="1"
                    android:text="0.00"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#cccccc" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/credit_icon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/ic_circle_image"
                android:contentDescription="@null"
                android:padding="14dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_balance_outcoming" />

            <LinearLayout
                android:id="@+id/outcoming_balance_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/outcoming_balance_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran"
                    android:textColor="#262626"
                    android:textSize="13sp"
                    android:text="@string/depenses" />

                <TextView
                    android:id="@+id/outcoming_balance_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran"
                    android:maxLines="1"
                    android:text="0.00"
                    android:textColor="@color/secondary_red"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/balance_view_separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:background="#eaeaea" />

    <FrameLayout
        android:id="@+id/group_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <FrameLayout
            android:id="@+id/balance_view_details_actions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/balance_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/balance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/catamaran"
                    android:text="Solde :"
                    android:textColor="#262626"
                    android:textSize="16sp"
                    tools:text="Solde :" />

                <TextView
                    android:id="@+id/balance_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/catamaran"
                    android:text="@string/label_price"
                    android:textColor="#262626"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/balance_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#262626"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/balance_details_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/pdf_report_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:visibility="gone"
                    android:src="@drawable/ic_pdf" />

                <ImageButton
                    android:id="@+id/show_hide_balance_btn"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="0dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_eye_closed" />

            </LinearLayout>

        </FrameLayout>

        <ImageButton
            android:id="@+id/collapse_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4.5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:src="@drawable/ic_collapse"
            android:visibility="gone" />

    </FrameLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#E2E2E2" />
</LinearLayout>
